# Cpp-Project-Template

./: README.md
.resources/templates/c++/: class_template.cpp.jinja
.resources/templates/cmake/: CMakeLists.txt.jinja  app_CMakeLists.txt.jinja  lib_CMakeLists.txt.jinja
.resources/templates/docs/: doxyfile_template.jinja
.vpm/templates/c++/: test_main_template.cpp.jinja
.vpm/templates/cmake/: test_CMakeLists.txt.jinja
app/: CMakeLists.txt
cmake/: Common.cmake  QtUtils.cmake  common.cmake
cmake/scripts/: DeployWindowsQtForVcpkg.bat
lib/: CMakeLists.txt
lib/mylib/include/: MyClassLib.h
lib/mylib/src/: MyClassLib.cpp
template/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  configure.bat  configure.psw  configure.sh
template/.ci/: linux.yml  macos.yml  windows.yml
template/.resources/ci/: CMakePresetForCI.json
template/.resources/templates/c++/: config.h.in.jinja  test_main_template.cpp.jinja
template/.resources/templates/cmake/: CMakeLists.txt.jinja  app_CMakeLists.txt.jinja  lib_CMakeLists.txt.jinja  test_CMakeLists.txt.jinja
template/.resources/templates/docs/: doxyfile_template.jinja
template/.vpm/templates/cmake/: CMakeLists.txt.jinja  app_CMakeLists.txt.jinja  lib_CMakeLists.txt.jinja
template/cmake/: QtUtils.cmake  VcpkgUtils.cmake  common.cmake
template/cmake/scripts/: DeployWindowsQtForVcpkg.bat
template/lib/mylib/: CMakeLists.txt
template/tools/src/module_creation/: module_creator.py
template/tools/src/package_managers_initializers/: package_manager.py  vcpkg_initializer.py
template/tools/src/project_management/: configure_project.py
template/tools/src/source_management/: file_synchronizer.py
template/tools/src/subtree/: subtree_manager.py
tools/: dev_tools.py
tools/src/module_creation/: create_module.py
(+2 files in other folders)
